Fix OpenDyslexic font alignment

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -6,19 +6,19 @@ $font: "IBM Sans Mono", monospace;
 $heading_font: "Nanum Gothic Coding", monospace;
 
 .opendyslexic:not(.forceregular) {
-  font-family: "Open Dyslexic", monospace !important;
-
-  .navbar {
     font-family: "Open Dyslexic", monospace !important;
-  }
 
-  code, pre {
-    font-family: "Open Dyslexic Mono", monospace !important;
-  }
+    .navbar {
+        font-family: "Open Dyslexic", monospace !important;
+    }
 
-  .forceregular {
-    font-family: $font !important;
-  }
+    code, pre {
+        font-family: "Open Dyslexic Mono", monospace !important;
+    }
+
+    .forceregular {
+        font-family: $font !important;
+    }
 }
 
 /*
@@ -26,9 +26,9 @@ $heading_font: "Nanum Gothic Coding", monospace;
  */
 
 html {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 body {
     margin: 0;
@@ -171,13 +171,25 @@ div.highlight {
     margin: 0;
     padding: 5px 0 5px 0;
     margin-left: 20px;
+    position: relative;
 }
 .nav-list {
     list-style-type: none;
     margin: 0 5px 0 10px;
 
-    a:hover i {
+    a {
         position: relative;
+    }
+
+    a:hover i {
+        top: -1px;
+    }
+
+    &:not(.opendyslexic) a:not(a.forceregular) {
+        top: -3px;
+    }
+
+    a.forceregular {
         top: -1px;
     }
 }
